@@ -29,7 +29,7 @@ plugins {
 
     id 'idea'
 
-    id 'org.openrewrite.rewrite' version '7.2.0'
+    id 'org.openrewrite.rewrite' version '7.3.0'
 
     id "org.itsallcode.openfasttrace" version "3.0.1"
 }
@@ -100,7 +100,9 @@ application {
         '--add-opens=javafx.controls/com.sun.javafx.scene.control=org.jabref',
 
         '--add-opens=javafx.base/javafx.collections=org.jabref',
-        '--add-opens=javafx.base/javafx.collections.transformation=org.jabref'
+        '--add-opens=javafx.base/javafx.collections.transformation=org.jabref',
+
+        '--enable-native-access=javafx.graphics,javafx.media,javafx.web,org.apache.lucene.core'
     ]
 }
 
@@ -148,12 +150,12 @@ dependencyLocking {
 }
 
 javafx {
-    version = "23.0.2"
+    version = "24"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing' ]
 }
 
 jacoco {
-    toolVersion = "0.8.13-SNAPSHOT"
+    toolVersion = "0.8.13"
 }
 
 dependencies {
@@ -179,7 +181,7 @@ dependencies {
     implementation "org.apache.lucene:lucene-analysis-common:$luceneVersion"
     implementation "org.apache.lucene:lucene-highlighter:$luceneVersion"
 
-    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.13.0'
+    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.14.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.13.0'
     implementation 'commons-logging:commons-logging:1.3.5'
@@ -204,10 +206,10 @@ dependencies {
     antlr4 'org.antlr:antlr4:4.13.2'
     implementation 'org.antlr:antlr4-runtime:4.13.2'
 
-    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '7.1.0.202411261347-r'
+    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '7.2.0.202503040940-r'
 
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.18.3'
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.18.2'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.18.3'
 
     implementation 'com.fasterxml:aalto-xml:1.3.3'
 
@@ -242,9 +244,9 @@ dependencies {
     implementation('org.jabref:easybind:2.2.1-SNAPSHOT') {
         exclude group: 'org.openjfx'
     }
-    implementation 'org.fxmisc.flowless:flowless:0.7.3'
-    implementation 'org.fxmisc.richtext:richtextfx:0.11.4'
-    implementation (group: 'com.dlsc.gemsfx', name: 'gemsfx', version: '2.95.0') {
+    implementation 'org.fxmisc.flowless:flowless:0.7.4'
+    implementation 'org.fxmisc.richtext:richtextfx:0.11.5'
+    implementation (group: 'com.dlsc.gemsfx', name: 'gemsfx', version: '2.96.0') {
         exclude module: 'javax.inject' // Split package, use only jakarta.inject
         exclude module: 'commons-lang3'
         exclude group: 'org.apache.commons.validator'
@@ -262,13 +264,13 @@ dependencies {
         exclude group: 'com.squareup.okhttp3'
     }
 
-    implementation 'org.controlsfx:controlsfx:11.2.1'
+    implementation 'org.controlsfx:controlsfx:11.2.2'
 
     // region HTTP clients
     implementation 'org.jsoup:jsoup:1.19.1'
     implementation 'com.konghq:unirest-java-core:4.4.5'
     implementation 'com.konghq:unirest-modules-gson:4.4.5'
-    implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.2'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.3'
     // endregion
 
     implementation 'org.slf4j:slf4j-api:2.0.17'
@@ -358,7 +360,7 @@ dependencies {
     }
 
     implementation 'org.apache.velocity:velocity-engine-core:2.4.1'
-    implementation platform('ai.djl:bom:0.31.1')
+    implementation platform('ai.djl:bom:0.32.0')
     implementation 'ai.djl:api'
     implementation 'ai.djl.huggingface:tokenizers'
     implementation 'ai.djl.pytorch:pytorch-model-zoo'
@@ -368,7 +370,7 @@ dependencies {
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
     }
     // GemxFX also (transitively) depends on kotlin
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.10'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.20'
     // endregion
 
     implementation 'commons-io:commons-io:2.18.0'
@@ -383,9 +385,9 @@ dependencies {
 
     testImplementation 'io.github.classgraph:classgraph:4.8.179'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.12.1'
-    testImplementation 'org.junit.platform:junit-platform-launcher:1.11.4'
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.12.1'
 
-    testImplementation 'org.mockito:mockito-core:5.16.0'
+    testImplementation 'org.mockito:mockito-core:5.17.0'
     testImplementation 'org.xmlunit:xmlunit-core:2.10.0'
     testImplementation 'org.xmlunit:xmlunit-matchers:2.10.0'
     testRuntimeOnly 'com.tngtech.archunit:archunit-junit5-engine:1.4.0'
@@ -393,17 +395,17 @@ dependencies {
     testImplementation "org.testfx:testfx-core:4.0.16-alpha"
     testImplementation "org.testfx:testfx-junit5:4.0.16-alpha"
     testImplementation "org.hamcrest:hamcrest-library:3.0"
-    testImplementation "com.github.javaparser:javaparser-symbol-solver-core:3.26.3"
+    testImplementation "com.github.javaparser:javaparser-symbol-solver-core:3.26.4"
 
     // recommended by https://github.com/wiremock/wiremock/issues/2149#issuecomment-1835775954
     testImplementation 'org.wiremock:wiremock-standalone:3.12.1'
 
-    checkstyle 'com.puppycrawl.tools:checkstyle:10.21.3'
+    checkstyle 'com.puppycrawl.tools:checkstyle:10.23.0'
     // xjc needs the runtime as well for the ant task, otherwise it fails
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-xjc', version: '3.0.2'
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.2'
 
-    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:3.2.0"))
+    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:3.5.0"))
     rewrite("org.openrewrite.recipe:rewrite-static-analysis")
     rewrite("org.openrewrite.recipe:rewrite-logging-frameworks")
     rewrite("org.openrewrite.recipe:rewrite-testing-frameworks")
@@ -457,6 +459,7 @@ processResources {
 tasks.register('generateSource') {
     dependsOn("generateBstGrammarSource",
             "generateSearchGrammarSource",
+            "generateLtwaGrammarSource",
             "generateCitaviSource")
     group = 'JabRef'
     description 'Generates all necessary (Java) source files.'
@@ -464,7 +467,7 @@ tasks.register('generateSource') {
 
 tasks.register("generateBstGrammarSource", JavaExec) {
     group = "JabRef"
-    description = 'Generates BstLexer.java and BstParser.java from the Bst.g grammar file using antlr4.'
+    description = 'Generates BstLexer.java and BstParser.java from the Bst.g4 grammar file using antlr4.'
     classpath = configurations.antlr4
     mainClass = "org.antlr.v4.Tool"
     javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
@@ -476,7 +479,7 @@ tasks.register("generateBstGrammarSource", JavaExec) {
 
 tasks.register("generateSearchGrammarSource", JavaExec) {
     group = 'JabRef'
-    description = "Generates java files for Search.g antlr4."
+    description = "Generates java files for Search.g4 antlr4."
     classpath = configurations.antlr4
     mainClass = "org.antlr.v4.Tool"
     javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
@@ -484,6 +487,18 @@ tasks.register("generateSearchGrammarSource", JavaExec) {
     inputs.dir("src/main/antlr4/org/jabref/search/")
     outputs.dir("src-gen/main/java/org/jabref/search/")
     args  = ["-o","src-gen/main/java/org/jabref/search" , "-visitor", "-no-listener", "-package", "org.jabref.search", "$projectDir/src/main/antlr4/org/jabref/search/Search.g4"]
+}
+
+tasks.register("generateLtwaGrammarSource", JavaExec) {
+    group = "JabRef"
+    description = 'Generates LtwaLexer.java and LtwaParser.java from the Ltwa.g4 grammar file using antlr4.'
+    classpath = configurations.antlr4
+    mainClass = "org.antlr.v4.Tool"
+    javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+
+    inputs.dir('src/main/antlr4/org/jabref/ltwa/')
+    outputs.dir("src-gen/main/java/org/jabref/logic/journals/ltwa/")
+    args = ["-o", "src-gen/main/java/org/jabref/logic/journals/ltwa/", "-no-visitor", "-listener", "-package", "org.jabref.logic.journals.ltwa", "$projectDir/src/main/antlr4/org/jabref/ltwa/Ltwa.g4"]
 }
 
 tasks.register("generateJournalListMV", JavaExec) {
@@ -499,6 +514,42 @@ tasks.register("generateJournalListMV", JavaExec) {
 
 jar.dependsOn("generateJournalListMV")
 compileTestJava.dependsOn("generateJournalListMV")
+
+tasks.register('downloadLtwaFile') {
+    group = "JabRef"
+    description = "Downloads the LTWA file for journal abbreviations"
+    doLast {
+        def ltwaUrl = "https://www.issn.org/wp-content/uploads/2021/07/ltwa_20210702.csv"
+        def ltwaDir = file("build/resources/main/journals")
+        def ltwaCsvFile = file("${ltwaDir}/ltwa_20210702.csv")
+
+        if (!ltwaCsvFile.exists()) {
+            mkdir(ltwaDir)
+            ant.get(src: ltwaUrl, dest: ltwaCsvFile, verbose: true)
+            logger.lifecycle("Downloaded LTWA file to ${ltwaCsvFile}")
+        } else {
+            logger.lifecycle("LTWA file already exists at ${ltwaCsvFile}")
+        }
+    }
+    onlyIf {
+        !file("build/resources/main/journals/ltwa_20210702.csv").exists()
+    }
+}
+
+tasks.register('generateLtwaListMV', JavaExec) {
+    group = "JabRef"
+    description = "Converts the LTWA CSV file to a H2 MVStore"
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = "org.jabref.cli.LtwaListMvGenerator"
+    javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+    dependsOn('downloadLtwaFile')
+    onlyIf {
+        !file("build/resources/main/journals/ltwa-list.mv").exists()
+    }
+}
+
+jar.dependsOn("generateLtwaListMV")
+compileTestJava.dependsOn("generateLtwaListMV")
 
 tasks.register('generateCitaviSource', XjcTask) {
     group = 'JabRef'
@@ -753,7 +804,8 @@ jlink {
     // https://github.com/beryx/badass-jlink-plugin/issues/61#issuecomment-504640018
     addExtraDependencies("javafx")
 
-    addOptions('--strip-debug', '--compress', 'zip-6', '--no-header-files', '--no-man-pages')
+    // We keep debug statements - otherwise '--strip-debug' would be included
+    addOptions('--compress', 'zip-6', '--no-header-files', '--no-man-pages')
     launcher {
         name = 'JabRef'
     }
